--- a/resource/index.html
+++ b/resource/index.html
@@ -154,7 +154,7 @@
 										<div class="panel-heading">
 											<div>
 												<div class="btn-group btn-group-lg" role="group">
-													<button id="btnNewgame" type="button" class="btn btn-info" style="display: none;" onclick="resetGame();">New Game</button>
+													<button id="btnNewgame" type="button" class="btn btn-info" style="display: none;" onclick="resetGame(false);">New Game</button>
 												</div>
 											</div>
 										</div>
@@ -205,7 +205,7 @@
 		          <h4 class="modal-title" style="text-align: center">Finding opponent</h4>
 		        </div>
 		        <div class="modal-body">
-		          <img src="img/search.gif" width="15%" height="15%">
+		          <img src="img/search.gif" width="90px" height="90px">
 		        </div>
 		        <div class="modal-footer">
 		          <button type="button" class="btn btn-danger" onclick="findOpponent(false);" style="display: block; margin-left: auto; margin-right: auto;"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
