--- a/resource/index.html
+++ b/resource/index.html
@@ -12,9 +12,6 @@
 	<link rel="SHORTCUT ICON" href="img/xo.ico" type="image/x-icon" />
 	<link rel="ICON" href="img/xo.ico" type="image/ico" />
 
-	<style>
-	</style>
-
 <!-- jQuery library -->
 	<script src="libs/bootstrap/js/jquery.min.js"></script>
 	<script src="libs/bootstrap/js/bootstrap.min.js"></script>
@@ -219,20 +216,19 @@
 		<!-- Modal HTML -->
 	    <div id="modalHowtoplay" class="modal fade">
 	        <div class="modal-dialog">
-	            <div class="modal-content" style="background-image: url('img/pencil.jpg'); width:800px; height:408px;" no-repeat >
+	            <div class="modal-content" style="background-image: url('img/pencil.jpg'); width:800px; height:358px;">
 	                <div class="modal-header">
 	                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 	                    <h4 class="modal-title">Five in a row -- How to play</h4>
 	                </div>
 	                <div class="modal-body" style="margin-left: 158px;">
-	                    <p class="ex1">Đây là Game Caro 5*5, hiện thực bằng html, chơi trên bàn cờ 15*15.</p>
-						<p class="ex1">Người chơi được tính là thắng khi đã tạo được 1 đường thằng, hoặc chéo, 
+	                    <p class="ex1">- Đây là Game Caro 5*5, hiện thực bằng html, chơi trên bàn cờ 15*15.</p>
+						<p class="ex1">- Người chơi được tính là thắng khi đã tạo được 1 đường thằng, hoặc chéo, 
 	                                   liên tục và có chiều dài bằng 5.</p>
-	                    <p class="ex1">Nhấn PRACTICE WITH BOT để tập chơi với máy.</p>
-						<p class="ex1">Nhấn NETWORK GAME để tìm kiếm trận đấu với những người chơi online khác.</p>
-						<p class="ex1">Chúc bạn chơi vui vẻ ^^!</p>
-	                </div>
-	                
+	                    <p class="ex1">- Chọn PRACTICE WITH BOT để tập chơi với máy.</p>
+						<p class="ex1">- Chọn NETWORK GAME để tìm kiếm trận đấu với những người chơi online khác.</p>
+						<p class="ex2"> HAVE FUN</p>
+	                </div>	                
 	            </div>
 	        </div>
 	    </div>
